# new_world

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/2026/04/: 18_1411_38_db44e5f72676_init_payment_table.py
src/: main.py
src/core/: config.py
src/di/: __init__.py
src/di/persistence/: db.py
src/infra/postgres/: __init__.py  base.py
src/infra/postgres/payment/: model.py
src/persistence/db/: connection.py  interface.py
